# dbd-obs-overlay

./: .gitignore  LICENSE  README.md  config.ini  overlay.html  package.json  server.py  vite.config.ts
.github/workflows/: release.yml
resources/config/: static.ini
src/: index.html  main.css  main.tsx  overlay.html  overlay.tsx  tauri-bridge.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  my_types.rs  server.rs
src/components/: Editor.css  Editor.tsx  Preview.css  Preview.tsx
src/components/settings/: Settings.css  Settings.tsx
src/components/settings/obsWebsocket/: ObsWebsocketSetting.css  ObsWebsocketSetting.tsx
src/components/title/: Titlebar.css  Titlebar.tsx
src/components/toasts/: NotepadToast.css  NotepadToast.tsx  SmallToast.css  SmallToast.tsx  ToastBackdrop.css  ToastBackdrop.tsx
src/hooks/: useConfig.tsx
src/types/: config.ts  global.d.ts
src/utils/: iniManager.tsx
