[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
dirs = "5"
tokio = { version = "1.38", features = ["full"] }
tiny_http = "0.12"
ws = "0.9.2"
lazy_static = "1.5.0"
json = "0.12.4"
warp = "0.4.1"
tokio-net = "0.0.0"
tokio-tungstenite = "0.27.0"
uuid = { version = "1.18.0", features = ["v4"] }
futures-util = "0.3.31"
sha2 = "0.10.9"
base64 = "0.22.1"

